Minor route and flow shuffling.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <form action="data" method="post">
+        <form action="auth" method="post">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-group">
                 <label for="scope" class="control-label">Scope</label>
