Simplifying example code to only return data from one API call.

--- a/views/data.ejs
+++ b/views/data.ejs
@@ -8,9 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Course Info</h1>
-        <pre><%= info %></pre>
-        <h1>Course Access Data</h1>
+        <h1>Data</h1>
         <pre><%= data %></pre>
     </div>
 </body>
