--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,12 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/flatly/bootstrap.min.css" rel="stylesheet" integrity="sha384-XYCjB+hFAjSbgf9yKUgbysEjaVLOXhCgATTEBpCqT1R3jvG5LGRAK5ZIyRbH5vpX" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-    <title>Application / Data API Demo App</title>
+    <title>OAuth 2.0 Client Example</title>
 </head>
 <body>
     <div class="container">
-        <h1>Application / Data API Demo App</h1>
-        <p>A simple app that uses the <a href="https://tools.ietf.org/html/rfc6749" target="_blank">OAuth 2.0 flow</a> to obtain access to Brightspace application or data APIs.</p>
+        <h1>OAuth 2.0 Client Example</h1>
+        <p>A simple app that uses the <a href="https://tools.ietf.org/html/rfc6749" target="_blank">OAuth 2.0 flow</a> to obtain access to Brightspace APIs.</p>
         <form action="auth" method="post">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-group">
